--- a/data-structures.bib
+++ b/data-structures.bib
@@ -1,12 +1,25 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2025-06-25 11:33:40 -0500 
+%% Created for Jeff Erickson at 2025-07-03 17:12:51 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{nw-ct-20,
+	author = {Nugent, Coleman and Wortman, Kevin A.},
+	booktitle = {Proc. 10th Ann. IEEE Comput. Commun. Workshop Conf. {CCWC}},
+	date-added = {2025-06-25 17:00:53 -0500},
+	date-modified = {2025-06-25 17:02:23 -0500},
+	doi = {10.1109/CCWC47524.2020.9031134},
+	keywords = {Balanced binary trees, WAVL trees, brother trees},
+	pages = {31--37},
+	publisher = {{IEEE}},
+	title = {Crumple Trees},
+	year = {2020},
+	bdsk-url-1 = {https://doi.org/10.1109/CCWC47524.2020.9031134}}
 
 @article{ss-scokh-90,
 	abstract = { The problem of constructing a dense static hash-based lookup table T for a set of n elements belonging to a universe \$U = \{ 0, 1, 2,\cdots , m -1 \}\$ is considered. Nearly tight bounds on the spatial complexity of oblivious \$O(1)\$-probe hash functions, which are defined to depend solely on their search key argument, are provided. This establishes a significant gap between oblivious and nonoblivious search. In particular, the results include the following: * A lower bound showing that oblivious k-probe hash functions require a program size of \$\Omega(({n / k}^{2})e^{-k}+\log \log m)\$ bits, on average. * A probabilistic construction of a family of oblivious k-probe hash functions that can be specified in \$O(n e^{-k} +\log \log m)\$ bits, which nearly matches the above lower bound. * A variation of an explicit \$O(1)\$ time 1-probe (perfect) hash function family that can be specified in \$O(n+\log \log m)\$ bits, which is tight to within a constant factor of the lower bound. },
@@ -19,7 +32,8 @@
 	pages = {775--786},
 	title = {The Spatial Complexity of Oblivious $k$-Probe Hash Functions},
 	volume = {19},
-	year = {1990}}
+	year = {1990},
+	bdsk-url-1 = {https://doi.org/10.1137/0219054}}
 
 @inproceedings{b-snta-68,
 	abstract = {To achieve high throughput rates today's computers perform several operations simultaneously. Not only are I/O operations performed concurrently with computing, but also, in multiprocessors, several computing operations are done concurrently. A major problem in the design of such a computing system is the connecting together of the various parts of the system (the I/O devices, memories, processing units, etc.) in such a way that all the required data transfers can be accommodated. One common scheme is a high-speed bus which is time-shared by the various parts; speed of available hardware limits this scheme. Another scheme is a cross-bar switch or matrix; limiting factors here are the amount of hardware (an m \texttimes{} n matrix requires m \texttimes{} n cross-points) and the fan-in and fan-out of the hardware.},
@@ -236,16 +250,15 @@
 	year = {1983},
 	bdsk-url-1 = {https://doi.org/10.1016/0020-0190(83)90075-3}}
 
-@inproceedings{fw-btitbw-90,
+@inproceedings{fw-btitb-90,
 	author = {Fredman, Michael L. and Willard, Dan E.},
 	booktitle = {Proc. 22nd Ann. {ACM} Symp. Theory Comput. (STOC)},
 	date-added = {2025-03-21 08:30:21 -0500},
-	date-modified = {2025-03-21 08:30:58 -0500},
+	date-modified = {2025-07-03 17:12:47 -0500},
 	doi = {10.1145/100216.100217},
 	pages = {1--7},
 	title = {{BLASTING} through the Information Theoretic Barrier with {FUSION} {TREES}},
-	year = {1990},
-	bdsk-url-1 = {https://doi.org/10.1145/100216.100217}}
+	year = {1990}}
 
 @article{fks-sstwc-84,
 	author = {Fredman, Michael L. and Koml\'{o}s, J\'{a}nos and Szemer\'{e}di, Endre},
