--- a/teaching.bib
+++ b/teaching.bib
@@ -1,12 +1,150 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2025-03-26 17:32:58 -0500 
+%% Created for Jeff Erickson at 2025-07-07 17:25:13 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bp-shifw-16,
+	abstract = {Syntax Highlighting or Syntax Colouring, Plays a Vital Role in Programming Development Environments by Colour-Coding Various Code Elements Differently. The Supposition Is That This Syntax Highlighting Assists Programmers When Reading and Analysing Code. However, Academic Text Books Are Largely Only Available in Black-and-White Which Could Influence the Comprehension of Novice and Beginner Programmers. This Study Investigated Whether Student Programmers Experience More Difficulty in Reading and Comprehending Source Code When It Is Presented Without Syntax Highlighting. Number of Fixations, Fixation Durations and Regressions Were All Higher for Black-and-White Code than for Colour Code but Not Significantly So. Subjectively Students Indicated That the Colour Code Snippets Were Easier to Read and More Aesthetically Pleasing. Based on the Analysis It Could Be Concluded That Students Do Not Experience Significantly More Difficulty When Reading Code in Black-and-White as Printed in Text Books.},
+	author = {Beelders, T. R. and Plessis, Jean-Pierre L. du},
+	date-added = {2025-07-07 17:24:49 -0500},
+	date-modified = {2025-07-07 17:25:09 -0500},
+	doi = {10.16910/jemr.9.1.1},
+	journal = {J. Eye Movement Res.},
+	number = {1},
+	pages = {1--11},
+	title = {Syntax Highlighting as an Influencing Factor When Reading and Comprehending Source Code},
+	volume = {9},
+	year = {2016}}
+
+@inproceedings{sppah-mnepc-17,
+	abstract = {Most modern software programs cannot be understood in their entirety by a single programmer. Instead, programmers must rely on a set of cognitive processes that aid in seeking, filtering, and shaping relevant information for a given programming task. Several theories have been proposed to explain these processes, such as ``beacons,' for locating relevant code, and ``plans,'' for encoding cognitive models. However, these theories are decades old and lack validation with modern cognitive-neuroscience methods. In this paper, we report on a study using functional magnetic resonance imaging (fMRI) with 11 participants who performed program comprehension tasks. We manipulated experimental conditions related to beacons and layout to isolate specific cognitive processes related to bottom-up comprehension and comprehension based on semantic cues. We found evidence of semantic chunking during bottom-up comprehension and lower activation of brain areas during comprehension based on semantic cues, confirming that beacons ease comprehension.},
+	author = {Siegmund, Janet and Peitek, Norman and Parnin, Chris and Apel, Sven and Hofmeister, Johannes and K\"{a}stner, Christian and Begel, Andrew and Bethmann, Anja and Brechmann, Andr\'{e}},
+	booktitle = {Proc. 11th Joint Meeting Found. Software Eng. (ESEC/FSE)},
+	date-added = {2025-07-07 17:20:46 -0500},
+	date-modified = {2025-07-07 17:21:23 -0500},
+	doi = {10.1145/3106237.3106268},
+	keywords = {functional magnetic resonance imaging, neural efficiency, program comprehension},
+	pages = {140--150},
+	title = {Measuring neural efficiency of program comprehension},
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.1145/3106237.3106268}}
+
+@inproceedings{b-eprcw-88,
+	abstract = {In order to make computer programs more comprehensible, the presentation of program source text, program documentation, and program execution needs to be enhanced over its conventional treatment. The paper describes a number of new techniques and tools developed to achieve these ends. One of these is a novel design for the effective presentation of source text in the C programming language using high quality digital typography, and a processor which implements the design. Some experimental evidence is summarized to demonstrate that the resulting source text presentation is significantly more readable and comprehensible than the presentation conventionally used today. Brief descriptions are also given of two other techniques, the development of a novel system of structured program documentation incorporating both text and graphics, and the portrayal of program execution with coloured computer animation.},
+	author = {Baecker, Ronald},
+	booktitle = {Proc. 10th Int. Conf. Software Eng. (ICSE)},
+	comments = {No external DOI},
+	date-added = {2025-07-07 17:15:50 -0500},
+	date-modified = {2025-07-07 17:18:00 -0500},
+	pages = {356--366},
+	title = {Enhancing program readability and comprehensibility with tools for program visualization},
+	url = {https://dl.acm.org/doi/10.5555/55823.55858},
+	year = {1988}}
+
+@inproceedings{d-ishs-15,
+	author = {Dimitri, Giovanna Maria},
+	booktitle = {Proc. 26th Ann. Workshop Psychology of Programming Interest Group (PPIG)},
+	date-added = {2025-07-07 17:03:37 -0500},
+	date-modified = {2025-07-07 17:04:12 -0500},
+	editor = {Coles, Melanie and Ollis, Gail},
+	pages = {9:1--9:12},
+	title = {The impact of Syntax Highlighting in Sonic Pi},
+	url = {https://ppig.org/papers/2015-ppig-26th-dimitri/},
+	year = {2015}}
+
+@inproceedings{ahm-ervcc-16,
+	abstract = {Researchers often introduce visual tools to programming environments in order to facilitate program comprehension, reduce navigation times, and help developers answer difficult questions. Syntax highlighting is the main visual lens through which developers perceive their code, and yet its effects and the effects of richer code presentations on code comprehension have not been evaluated systematically. We present a rigorous user study comparing mainstream syntax highlighting to two visually-enhanced presentations of code. Our results show that: (1) richer code visualizations reduce the time necessary to answer questions about code features, and (2) contrary to the subjective perception of developers, richer code visualizations do not lead to visual overload. Based on our results we outline practical recommendations for tool designers.},
+	author = {Asenov, Dimitar and Hilliges, Otmar and M{\"u}ller, Peter},
+	booktitle = {Proc. 34th Ann. Conf. Human Factors Comput. Sys. (CHI)},
+	date-added = {2025-07-07 16:35:40 -0500},
+	date-modified = {2025-07-07 16:38:41 -0500},
+	doi = {10.1145/2858036.2858372},
+	keywords = {visual programming, user study, syntax highlighting, programming, code editor, code comprehension},
+	pages = {5040--5045},
+	title = {The Effect of Richer Visualizations on Code Comprehension},
+	year = {2016}}
+
+@inproceedings{s-iscpc-15,
+	author = {Sarkar, Advait},
+	booktitle = {Proc. 26th Ann. Workshop Psychology of Programming Interest Group (PPIG)},
+	date-added = {2025-07-07 16:32:01 -0500},
+	date-modified = {2025-07-07 16:39:37 -0500},
+	editor = {Coles, Melanie and Ollis, Gail},
+	pages = {8:1--8:12},
+	title = {The impact of syntax colouring on program comprehension},
+	url = {https://ppig.org/papers/2015-ppig-26th-sarkar1/},
+	year = {2015}}
+
+@article{hhg-dshhp-18,
+	abstract = {Program comprehension is an important skill for programmers --extending and debugging existing source code is part of the daily routine. Syntax highlighting is one of the most common tools used to support developers in understanding algorithms. However, most research in this area originates from a time when programmers used a completely different tool chain. We examined the influence of syntax highlighting on novices'ability to comprehend source code. Additional analyses cover the influence of task type and programming experience on the code comprehension ability itself and its relation to syntax highlighting. We conducted a controlled experiment with 390 undergraduate students in an introductory Java programming course. We measured the correctness with which they solved small coding tasks. Each test subject received some tasks with syntax highlighting and some without. The data provided no evidence that syntax highlighting improves novices'ability to comprehend source code. There are very few similar experiments and it is unclear as of yet which factors impact the effectiveness of syntax highlighting. One major limitation may be the types of tasks chosen for this experiment. The results suggest that syntax highlighting squanders a feedback channel from the IDE to the programmer that can be used more effectively.},
+	author = {Hannebauer, Christoph and Hesenius, Marc and Gruhn, Volker},
+	date-added = {2025-07-07 14:25:55 -0500},
+	date-modified = {2025-07-07 14:26:04 -0500},
+	doi = {10.1007/s10664-017-9579-0},
+	journal = {Empirical Software Engineering},
+	number = {5},
+	pages = {2795--2828},
+	title = {Does syntax highlighting help programming novices?},
+	volume = {23},
+	year = {2018}}
+
+@inproceedings{tbs-aibhbp-21,
+	abstract = {To improve programming education, it is worthwhile to investigate how understanding of source code takes place. Reading is a foundational skill essential to tracing, debugging and understanding code. As readers' working memory is limited, their proficiency strongly relies on the ability to chunk and organize source code material. There are several alternative visual representations aiming to facilitate code reading, of which syntax highlighting is the most common. We hypothesized that highlighting code blocks in the style of the language Stride would scaffold students' reading process more effectively.In this exploraratory study, the code reading behavior of seven students was investigated in the context of a code comprehension task using eye tracking, stimulated Retrospective Think Aloud and interviews. The tasks were either presented using plain code, with standard syntax highlighting or with block highlighting. We found no significant differences in the students' comprehension scores. Their reading patterns, however, turned out to be strongly affected by the highlighting conditions. Remarkably, this effect appears to be subconscious, as participants consistently claimed to not have been influenced by the block highlighting. This also implies that in order to study code reading behavior and comprehension, participant reports alone are not sufficient. An approach combining objective data, such as that of eye tracking, combined with classic stimulated retrospective think aloud sessions is needed to paint the full picture.},
+	author = {Talsma, Renske and Barendsen, Erik and Smetsers, Sjaak},
+	booktitle = {Proc. 9th Computer Science Education Research Conf. (CSERC)},
+	date-added = {2025-07-07 14:24:44 -0500},
+	date-modified = {2025-07-07 14:25:32 -0500},
+	doi = {10.1145/3442481.3442505},
+	keywords = {code comprehension, cognitive load, eye tracking, programming education, retrospective think aloud, source code reading},
+	title = {Analyzing the influence of block highlighting on beginning programmers' reading behavior using eye tracking},
+	year = {2021},
+	bdsk-url-1 = {https://doi.org/10.1145/3442481.3442505}}
+
+@article{lfu-eslrpi-23,
+	abstract = {Objectives. Automatic assessment systems are widely used to provide rapid feedback for students and reduce grading time. Despite the benefits of increased efficiency and improved pedagogical outcomes, an ongoing challenge is mitigating poor student behaviors when interacting with automatic assessment systems including numerous submissions, trial-and-error, and relying on marking feedback for problem solving. These behaviors negatively affect student learning as well as have significant impact on system resources. This research quantitatively examines how utilizing submission policies such as limiting the number of submissions and applying regression penalties can reduce negative student behaviors. The hypothesis is that both submission policies will have a significant impact on student behavior and reduce both the number of submissions and regressions in student performance. The research questions evaluate the impact on student behavior, determine which submission policy is the most effective, and what submission policy is preferred by students.Participants. The study involved two course sections in two different semesters consisting of a total of 224 students at the University of British Columbia, a research-intensive university. The students were evaluated using an automated assessment system in a large third year database course.Study Methods. The two course sections used an automated assessment system for constructing database design diagrams for assignments and exams. The first section had no limits on the number of submissions for both assignments and exams. The second section had limits for the exams but no limits on assignments. On the midterm, participants were randomly assigned to have either a restriction on the total number of submissions or unlimited submissions but with regression penalties if a graded answer was lower than a previous submission. On the final exam, students were given the option of selecting their submission policy. Student academic performance and submission profiles were compared between the course sections and the different submission policies.Findings. Unrestricted use of automatic grading systems results in high occurrence of undesirable student behavior including trial-and-error guessing and reduced time between submissions without sufficient independent thought. Both submission policies of limiting maximum submissions and utilizing regression penalties significantly reduce these behaviors by up to 85\%. Overall, students prefer maximum submission limits, and demonstrate improved behavior and educational outcomes.Conclusions. Automated assessment systems when used for larger problems related to design and programming have benefits when deployed with submission restrictions (maximum attempts or regression penalty) for both improved student learning behaviors and to reduce the computational costs for the system. This is especially important for summative assessment but reasonable limits for formative assessments are also valuable.},
+	author = {Lawrence, Ramon and Foss, Sarah and Urazova, Tatiana},
+	date-added = {2025-07-01 10:11:21 -0500},
+	date-modified = {2025-07-01 10:11:52 -0500},
+	doi = {10.1145/3591210},
+	journal = {ACM Trans. Comput. Educ.},
+	keywords = {Automatic marking, auto-grading, assessment, submission limits, regression penalties, programming and design questions, UML, database},
+	number = {3},
+	pages = {31:1--31:24},
+	title = {Evaluation of Submission Limits and Regression Penalties to Improve Student Behavior with Automatic Assessment Systems},
+	url = {https://doi.org/10.1145/3591210},
+	volume = {23},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.1145/3591210}}
+
+@inproceedings{bzhh-sairpd-21,
+	abstract = {Autograders are an invaluable tool for deploying assessments in large classes. However students sometimes rely on the autograder in place of careful thought for ways to improve to their solution. We sought to naturally encourage students to check their own solutions more, and hammer the grader less. To do this, we imposed a penalty each time a student's grade went down: we called these regression penalties. We assessed whether the introduction of these penalties resulted in less reliance on the autograder without hurting student performance.Encouragingly, the number of autograder submissions was reduced by roughly half while only slightly decreasing the median final grade. Students reported feeling nervous about their submissions, but noted that they checked their own solutions by testing their code far more than they would have without the penalty. Students also expressed positivity about the regression model.},
+	author = {Baniassad, Elisa and Zamprogno, Lucas and Hall, Braxton and Holmes, Reid},
+	booktitle = {Proc. 52nd ACM Technical Symposium on Computer Science Education (SIGCSE)},
+	date-added = {2025-07-01 10:05:34 -0500},
+	date-modified = {2025-07-01 10:06:23 -0500},
+	doi = {10.1145/3408877.3432430},
+	keywords = {software engineering, autograder, assessment},
+	numpages = {7},
+	pages = {1062--1068},
+	title = {{STOP} {THE} {(AUTOGRADER)} {INSANITY}: {Regression} Penalties to Deter Autograder Overreliance},
+	year = {2021},
+	bdsk-url-1 = {https://doi.org/10.1145/3408877.3432430}}
+
+@article{ffpmr-pbags-25,
+	author = {Figueras, Cl{\`a}udia and Farazouli, Alexandra and Pargman, Teresa Cerratto and McGrath, Cormac and Rossitto, Chiara},
+	date-added = {2025-07-01 10:00:59 -0500},
+	date-modified = {2025-07-01 10:02:13 -0500},
+	doi = {10.1080/20004508.2025.2464996},
+	journal = {Education Inquiry},
+	pages = {1--22},
+	title = {Promises and breakages of automated grading systems: a qualitative study in computer science education},
+	year = {2025},
+	bdsk-url-1 = {https://doi.org/10.1080/20004508.2025.2464996}}
 
 @article{mfdww-cmtpc-22,
 	abstract = {There has been significant growth in the literature base exploring questions of teaching in undergraduate mathematics. In this paper we synthesize the literature on the teaching of proof-based undergraduate mathematics, drawing on 104 published reports from a range of countries and research traditions. We primarily differentiate the papers into those which explore lecture-based pedagogy and student-centered pedagogy. For each type of instruction, we focus on three categories of findings from the literature: description of instruction, instructor beliefs and rationales, and the relationship between instruction and students (cognitive, participatory, affective, and equity oriented). Much is known about the enactment of lecture-based teaching, including instructors' cognitive and affective goals. The student-centered literature focuses on tensions and challenges implementing curricula with a greater focus on participatory goals. Overall, there are few studies that attempt to link instructors' classroom activity and students' learning. Similarly, attention to equity is relatively lacking in the extant research.},
@@ -19,7 +157,8 @@
 	pages = {100986},
 	title = {Collegiate mathematics teaching in proof-based courses: {What} we now know and what we have yet to learn},
 	volume = {67},
-	year = {2022}}
+	year = {2022},
+	bdsk-url-1 = {https://doi.org/10.1016/j.jmathb.2022.100986}}
 
 @article{ssh-cmtup-10,
 	abstract = {Though written accounts of collegiate mathematics teaching exist (e.g., mathematicians' reflections and analyses of learning and teaching in innovative courses), research on collegiate teachers' actual classroom teaching practice is virtually non-existent. We advance this claim based on a thorough review of peer-reviewed journals where scholarship on collegiate mathematics teaching is published. To frame this review, we distinguish between instructional activities and teaching practice and present six categories of published scholarship that consider collegiate teaching but are not descriptive empirical research on teaching practice. Empirical studies can reveal important differences among teachers' thinking and actions, promote discussions of practice, and support learning about teaching. To support such research, we developed a preliminary framework of cognitively oriented dimensions of teaching practice based on our review of empirical research on pre-college and college teaching.},
@@ -33,7 +172,8 @@
 	pages = {99--114},
 	title = {Collegiate mathematics teaching: {An} unexamined practice},
 	volume = {29},
-	year = {2010}}
+	year = {2010},
+	bdsk-url-1 = {https://doi.org/10.1016/j.jmathb.2010.02.001}}
 
 @inbook{dm-actlu-01,
 	abstract = {In this paper, we have mentioned six ways in which a theory can contribute to research and we suggest that this list can be used as criteria for evaluating a theory. We have described how one such perspective, APOS Theory, is being used in an organized way by members of RUMEC and others to conduct research and develop curriculum. We have shown how observing students' success in making or not making mental constructions proposed by the theory and using such observations to analyze data can organize our thinking about learning mathematical concepts, provide explanations of student difficulties and predict success or failure in understanding a mathematical concept. There is a wide range of mathematical concepts to which APOS Theory can and has been applied and this theory is used as a language for communication of ideas about learning. We have also seen how the theory is grounded in data, and has been used as a vehicle for building a community of researchers. Yet its use is not restricted to members of that community. Finally, we point to an annotated bibliography (McDonald, 2000), which presents further details about this theory and its use in research in undergraduate mathematics education.},
